security/chore: add gitleaks to local development workflow
- Configure gitleaks in lefthook pre-commit hook
- Enable secret scanning for repository

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -14,3 +14,6 @@ pre-commit:
       tags: backend test
       glob: "tests/*.py"
       run: uv run pytest {staged_files}
+    gitleaks:
+      tags: security
+      run: gitleaks detect --verbose --redact
